add criterion benchmarks

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,5 +10,10 @@ edition = "2018"
 rust-crypto = "0.2"
 
 [dev-dependencies]
+criterion = "0.3"
 quickcheck = "0.9"
 quickcheck_macros = "0.9"
+
+[[bench]]
+name = "my_benchmark"
+harness = false
